<resources>
    <string name="app_name">EdLink (Duplicate)</string>
    <string name="text1">Already have an account?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="text2">ATTENDANCE USING QR CODE</string>
    <string name="text3">Attendance is made easier by using the QR Code</string>
    <string name="text4">ONLINE DISCUSSION</string>
    <string name="text5">Discussing with friends and lectures is easier</string>
    <string name="text6">CHECK THE LEARNING REPORT</string>
    <string name="text7">Check academic data easier</string>
    <string name="text8">NOTIFICATION OF SCHEDULE</string>
    <string name="text9">Notification of upcoming lecture schedules</string>
    <string name="registration">Registration</string>
    <string name="text10">Please complete the following data below to register for an EdLink account</string>
    <string name="email_address">Email Address</string>
    <string name="text11">Enter email address</string>
    <string name="full_name">Full Name</string>
    <string name="text12">Enter full name</string>
    <string name="password">Password</string>
    <string name="text13">Create password</string>
    <string name="retype_password">Retype Password</string>
    <string name="text14">Or register with</string>
    <string name="text15">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="please_complete_data">Mohon lengkapi data</string>
    <string name="loading">Memuat...</string>
    <string name="text16">Pastikan email yang anda berikan (</string>
    <string name="text17">) valid dan aktif. Terima kasih</string>
    <string name="cancel">Batal</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="text18">Email yang Anda berikan sudah terdaftar di sistem kami.</string>
    <string name="account_verification">Account Verification</string>
    <string name="text19">Don\'t have an account?</string>
    <string name="resending">Resending</string>
    <string name="text20">We have sent a verification code to the email</string>
    <string name="text21">, please check your email</string>
    <string name="text22">Please enter your verification code</string>
    <string name="text23">The verification code you entered is not correct</string>
    <string name="text24">Verifying email address...</string>
    <string name="logging_in">Sedang masuk...</string>
    <string name="next">NEXT</string>
    <string name="text25">Welcome, enter your email and password to enter your account</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="text26">or sign in with</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="likes">likes</string>
    <string name="news">News</string>
    <string name="like_count">likes</string>
    <string name="comment_count">comments</string>
    <string name="text27">Type a comment...</string>
    <string name="select_image">Pilih gambar...</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirmation_1">Are you sure you want to delete this comment?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="deleting_comment">Deleting comment...</string>
    <string name="exit">Exit</string>
    <string name="confirmation_2">Are you sure you want to logout?</string>
    <string name="others">Others</string>
</resources>