<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyActivity">

    <TextView
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/account_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text1"
        android:textColor="#888888"
        android:textSize="15sp"
        android:layout_marginTop="16dp"
        android:text="@string/account_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/verification_code"
        android:background="#FFFFFF"
        android:gravity="center"
        android:textColor="#000000"
        android:textColorHint="#888888"
        android:textSize="30sp"
        android:hint="XXXX"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <View
        android:background="#CC000000"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/button_bg_02"
        android:text="@string/next"
        android:onClick="next"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#888888"
            android:textSize="15sp"
            android:text="@string/text19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/green"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/resending"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>