<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FFFFFF"
        android:elevation="12dp"
        android:theme="@style/CustomToolbarTheme"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="#888888"
                android:textSize="15sp"
                android:text="@string/text25"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/email_address"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:textColorHint="#888888"
                    android:hint="@string/text11"
                    android:background="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="45dp" />

                <View
                    android:background="#FF000000"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="1px" />

            </RelativeLayout>

            <TextView
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/password"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:textColorHint="#888888"
                    android:hint="@string/text13"
                    android:background="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="45dp" />

                <RelativeLayout
                    android:clickable="true"
                    android:onClick="showPassword"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="40dp"
                    android:layout_height="45dp">

                    <ImageView
                        android:src="@drawable/view_password"
                        android:layout_centerInParent="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                </RelativeLayout>

                <View
                    android:background="#FF000000"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="1px" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp">

                <TextView
                    android:textColor="@color/green"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/forgot_password"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_bg_01"
                android:onClick="login"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_gravity="center_horizontal"
                android:textColor="#888888"
                android:textSize="13sp"
                android:text="@string/text26"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_marginTop="12dp"
                android:background="#E3F1FD"
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <TextView
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:text="Siakad"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:src="@drawable/university"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="8dp"
                android:background="#E3F1FD"
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <TextView
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:text="Google"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:src="@drawable/google"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:layout_gravity="center_horizontal"
                android:onClick="signup"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text19"
                    android:textColor="#848484"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/green"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>