<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".IntroActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp"
        android:layout_alignParentTop="true"
        android:layout_above="@id/ll1"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.github.vivchar.viewpagerindicator.ViewPagerIndicator
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="36dp"
            app:delimiterSize="8dp"
            app:itemScale="1.5"
            app:itemSelectedTint="#00BA5D"
            app:itemSize="8dp"
            app:itemTint="#87DDAC" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_bg_01"
            android:text="@string/sign_up"
            android:onClick="signup"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:clickable="true"
            android:onClick="login"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1"
                android:textColor="#848484"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/login"
                android:textColor="@color/green"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>